--- a/config/settings.yml
+++ b/config/settings.yml
@@ -13,4 +13,4 @@ validate:
     length_50: 50
     length_6: 6
     length_255: 255
-  valid_email_regex: /\A[\w+\-.]+@[a-z\d\-]+(\.[a-z\d\-]+)*\.[a-z]+\z/i
+  valid_email_regex: !ruby/regexp /\A[\w+\-.]+@[a-z\d\-]+(\.[a-z\d\-]+)*\.[a-z]+\z/i
