--- a/config/settings.yml
+++ b/config/settings.yml
@@ -17,3 +17,5 @@ validate:
   valid_email_regex: !ruby/regexp /\A[\w+\-.]+@[a-z\d\-]+(\.[a-z\d\-]+)*\.[a-z]+\z/i
 pagy:
   items_per_page: 30
+mailer:
+  from: "quangnam260800@gmail.com"
